# OpenGLDemos

Demo0/: CMakeLists.txt  main.cpp
Demo1_6/: CMakeLists.txt  Triangle.cpp  Triangle.h  main.cpp
Demo2/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.h
